crates/pardosa-genome/tests/compile_fail/btreemap_non_genome_ord_key.stderr
error[E0277]: the trait bound `MyKey: GenomeOrd` is not satisfied
  --> tests/compile_fail/btreemap_non_genome_ord_key.rs:14:11
   |
14 |     data: BTreeMap<MyKey, String>,
   |           ^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `GenomeOrd` is not implemented for `MyKey`
  --> tests/compile_fail/btreemap_non_genome_ord_key.rs:6:1
   |
 6 | struct MyKey {
   | ^^^^^^^^^^^^
   = help: the following other types implement trait `GenomeOrd`:
             ()
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
             (T0, T1, T2, T3, T4, T5)
             (T0, T1, T2, T3, T4, T5, T6)
             (T0, T1, T2, T3, T4, T5, T6, T7)
           and $N others
   = note: required for `BTreeMap<MyKey, String>` to implement `GenomeSafe`
